# QTPythonExamples

./: .gitignore  README.md  setup.cfg
qt_examples/qt_interactive_line_chart_example/interactive_scatterplot_example/: tablemodel.py  viewwidget.py
qt_examples/qt_interactive_scatterplot_example/: main.py
qt_examples/qt_opengl_example/glsl/: fragment_shader.glsl
qt_examples/qt_opengl_example/ui/: mainwindow.ui
qt_examples/qt_simple_3d_example/: simple_3d_bars_example.py  simple_3d_sphere_example.py
qt_examples/qt_transferfunction_example/: main.py
qt_interactive_line_chart_example/data/: all_day.csv
qt_interactive_line_chart_example/interactive_scatterplot_example/: ichartview.py
qt_objects/: configurable_line_series.py  configurable_scatter_series.py  configurable_xy_series.py
qt_opengl_example/: main.py
qt_opengl_example/src/: ui_mainwindow.py
qt_widgets/: interactive_chart.py  iqchartview.py  transferfunction_widget.py
src/qt_examples/qt_interactive_line_chart_example/: README.md
src/qt_examples/qt_interactive_scatterplot_example/: main.py
src/qt_examples/qt_opengl_example/: README.md  main.py
src/qt_examples/qt_simple_3d_example/: README.md
src/qt_examples/qt_transferfunction_example/: main.py
src/qt_objects/: configurable_line_series.py
src/qt_opengl_example/: main.py
src/qt_utility/: interpolation.py
src/qt_widgets/: interactive_chart.py  transferfunction_widget.py
src/qtpex/qt_objects/: README.md  configurable_line_series.py  (+2 more)
src/rbnbr_qtpythonexamples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+20 files in other folders)
