[metadata]
name = rbnbr_qtpythonexamples
version = 0.0.9
author = Ruben Bauer
author_email = ruben.bauer98@googlemail.com
description = Some python with Qt examples as well as some widgets and objects to use in Qt.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbnbr/QTPythonExamples
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    PySide6
    pandas
    PyOpenGL

[options.packages.find]
where = src